Revision history for {{$dist->name}}

{{$NEXT}}

0.041     2015-03-18 22:14:08-07:00 America/Los_Angeles (TRIAL RELEASE)

        Switch from File::pushd to File::chdir (John Anderson)

0.040     2015-03-13 16:11:14-07:00 America/Los_Angeles

        No changes from 0.039-TRIAL

0.039     2015-02-23 19:27:47-08:00 America/Los_Angeles (TRIAL RELEASE)

        Various POD updates (B. Estrade)
        Exclude failing test on Mac OS with older Git (#41) (John Anderson)
        POD and typo fixes (Doug Bell)

0.038     2014-10-29 10:35:40-07:00 America/Los_Angeles

0.037     2014-08-13 12:43:00-05:00 America/Chicago

        Fix 'git config' during install stuff (Graham Knop)

0.036     2014-08-12 23:50:30-05:00 America/Chicago

        Run 'git config' during install (Karen Etheridge)

0.035     2014-07-30 07:25:21-07:00 America/Los_Angeles

        Attempted fix for Win32 test fails

0.034     2014-07-24 18:30:14-07:00 America/Los_Angeles

        Fix typo in minimum version required of File::pushd (Russell
        Jenkins)

0.033     2014-07-24 14:45:05-07:00 America/Los_Angeles

        require File::pushd 1.05 at a minimum

0.032     2014-04-22 18:29:06-07:00 America/Los_Angeles

        bail out early in Makefile.PL if git not installed, instead of
        failing tests (Karen Etheridge)

0.031     2014-03-17 08:10:42-07:00 America/Los_Angeles

        Only load IPC::Cmd if needed (Graham Knop)
        Reduce dependency on Path::Class to test.recommends, fix min version (Kent Fredric)
        Increment minimum version in eval check to match stated dist.ini version
        typo fix (dsteinbrunner)

0.030     2013-07-29 09:23:13 America/Los_Angeles

        Add explicit version dep on Path::Class (#40) (John SJ Anderson)
        Fixes typos. (Olaf Alders)

0.029     2013-05-07 10:21:26 America/Los_Angeles

        Included missed Changes update from last release...

0.028_97  2013-04-23 06:17:12 America/Los_Angeles
